community e grado medio ponderato

--- a/lettura_dataset.ipynb
+++ b/lettura_dataset.ipynb
@@ -825,6 +825,153 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Team con più acquisti e cessioni"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Squadra: FC Internazionale\n",
+      "Trasferimenti in uscita: 216\n",
+      "\n",
+      "Squadra: Chelsea FC\n",
+      "Trasferimenti in uscita: 208\n",
+      "\n",
+      "Squadra: Genoa CFC\n",
+      "Trasferimenti in uscita: 207\n",
+      "\n",
+      "Squadra: FC Porto\n",
+      "Trasferimenti in uscita: 200\n",
+      "\n",
+      "Squadra: SL Benfica\n",
+      "Trasferimenti in uscita: 193\n",
+      "\n",
+      "Squadra: Juventus FC\n",
+      "Trasferimenti in uscita: 193\n",
+      "\n",
+      "Squadra: AS Roma\n",
+      "Trasferimenti in uscita: 174\n",
+      "\n",
+      "Squadra: Udinese Calcio\n",
+      "Trasferimenti in uscita: 167\n",
+      "\n",
+      "Squadra: Manchester City\n",
+      "Trasferimenti in uscita: 157\n",
+      "\n",
+      "Squadra: Sporting CP\n",
+      "Trasferimenti in uscita: 151\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Crea una lista di tuple (squadra, trasferimenti_in_uscita) per ogni squadra\n",
+    "outbound_transfers = {}\n",
+    "\n",
+    "for team_node in net.nodes():\n",
+    "    team_name = net.nodes[team_node]['name']\n",
+    "    outbound_transfers[team_name] = 0\n",
+    "\n",
+    "for team_node in net.nodes():\n",
+    "    out_edges = net.out_edges(team_node, data=True)\n",
+    "    for _, _, edge_attrs in out_edges:\n",
+    "        if edge_attrs['label'] == 'transfer':\n",
+    "            team_name = net.nodes[team_node]['name']\n",
+    "            outbound_transfers[team_name] += 1\n",
+    "\n",
+    "# Ordina la lista in base al numero di trasferimenti in uscita in ordine decrescente\n",
+    "sorted_outbound_teams = sorted(outbound_transfers.items(), key=lambda x: x[1], reverse=True)\n",
+    "\n",
+    "# Ottieni le prime 10 squadre con il maggior numero di trasferimenti in uscita\n",
+    "top_10_outbound_teams = sorted_outbound_teams[:10]\n",
+    "\n",
+    "# Stampa le prime 10 squadre con il maggior numero di trasferimenti in uscita\n",
+    "for team_name, transfers in top_10_outbound_teams:\n",
+    "    print(f\"Squadra: {team_name}\")\n",
+    "    print(f\"Trasferimenti in uscita: {transfers}\")\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Squadra: Genoa CFC\n",
+      "Trasferimenti in entrata: 229\n",
+      "\n",
+      "Squadra: Parma Calcio 1913\n",
+      "Trasferimenti in entrata: 203\n",
+      "\n",
+      "Squadra: UC Sampdoria\n",
+      "Trasferimenti in entrata: 145\n",
+      "\n",
+      "Squadra: AC Milan\n",
+      "Trasferimenti in entrata: 142\n",
+      "\n",
+      "Squadra: Juventus FC\n",
+      "Trasferimenti in entrata: 140\n",
+      "\n",
+      "Squadra: AS Roma\n",
+      "Trasferimenti in entrata: 136\n",
+      "\n",
+      "Squadra: FC Internazionale\n",
+      "Trasferimenti in entrata: 135\n",
+      "\n",
+      "Squadra: ACF Fiorentina\n",
+      "Trasferimenti in entrata: 131\n",
+      "\n",
+      "Squadra: Chievo Verona\n",
+      "Trasferimenti in entrata: 125\n",
+      "\n",
+      "Squadra: Bologna FC 1909\n",
+      "Trasferimenti in entrata: 123\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Crea una lista di tuple (squadra, trasferimenti_in_entrata) per ogni squadra\n",
+    "inbound_transfers = {}\n",
+    "\n",
+    "for team_node in net.nodes():\n",
+    "    team_name = net.nodes[team_node]['name']\n",
+    "    inbound_transfers[team_name] = 0\n",
+    "\n",
+    "for team_node in net.nodes():\n",
+    "    in_edges = net.in_edges(team_node, data=True)\n",
+    "    for _, _, edge_attrs in in_edges:\n",
+    "        if edge_attrs['label'] == 'transfer':\n",
+    "            team_name = net.nodes[team_node]['name']\n",
+    "            inbound_transfers[team_name] += 1\n",
+    "\n",
+    "# Ordina la lista in base al numero di trasferimenti in entrata in ordine decrescente\n",
+    "sorted_inbound_teams = sorted(inbound_transfers.items(), key=lambda x: x[1], reverse=True)\n",
+    "\n",
+    "# Ottieni le prime 10 squadre con il maggior numero di trasferimenti in entrata\n",
+    "top_10_inbound_teams = sorted_inbound_teams[:10]\n",
+    "\n",
+    "# Stampa le prime 10 squadre con il maggior numero di trasferimenti in entrata\n",
+    "for team_name, transfers in top_10_inbound_teams:\n",
+    "    print(f\"Squadra: {team_name}\")\n",
+    "    print(f\"Trasferimenti in entrata: {transfers}\")\n",
+    "    print()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 65,
    "metadata": {},
@@ -864,6 +1011,13 @@
     "# Stampa i nomi dei calciatori e il numero di trasferimenti per i primi 5 calciatori più mobili\n",
     "for player_name, movement_count in top_5_mobile_players:\n",
     "    print(f\"Calciatore: {player_name}, Numero di Trasferimenti: {movement_count}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Community"
    ]
   },
   {
@@ -924,6 +1078,106 @@
     "pos = nx.spring_layout(undirected_net)  # Puoi scegliere diversi layout a seconda delle preferenze\n",
     "nx.draw(undirected_net, pos, node_color=node_colors, with_labels=False, node_size=20, edge_color='gray')\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Node: 336, Team Name: Sporting CP, Betweenness Centrality: 0.027763478030427766\n",
+      "Node: 720, Team Name: FC Porto, Betweenness Centrality: 0.021657689075593293\n",
+      "Node: 294, Team Name: SL Benfica, Betweenness Centrality: 0.018079411975427964\n",
+      "Node: 162, Team Name: AS Monaco, Betweenness Centrality: 0.01745369070300057\n",
+      "Node: 410, Team Name: Udinese Calcio, Betweenness Centrality: 0.017204626943278532\n",
+      "Node: 631, Team Name: Chelsea FC, Betweenness Centrality: 0.015832044455017284\n",
+      "Node: 252, Team Name: Genoa CFC, Betweenness Centrality: 0.01495182813632546\n",
+      "Node: 281, Team Name: Manchester City, Betweenness Centrality: 0.014852980361740894\n",
+      "Node: 368, Team Name: Sevilla FC, Betweenness Centrality: 0.013292914950165529\n",
+      "Node: 1075, Team Name: SC Braga, Betweenness Centrality: 0.012899618036455361\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calcola la betweenness centrality dei nodi nel grafo non direzionato\n",
+    "betweenness_centrality = nx.betweenness_centrality(undirected_net)\n",
+    "\n",
+    "# Ordina i nodi per la betweenness centrality in ordine decrescente\n",
+    "sorted_nodes = sorted(betweenness_centrality.items(), key=lambda x: x[1], reverse=True)\n",
+    "\n",
+    "# Stampa i primi 10 nodi con la betweenness centrality maggiore e i loro nomi di team\n",
+    "top_10_nodes = sorted_nodes[:10]\n",
+    "for node, centrality in top_10_nodes:\n",
+    "    team_name = undirected_net.nodes[node]['name']  # Assumi che 'name' sia l'attributo associato ai nodi per il nome del team\n",
+    "    print(f\"Node: {node}, Team Name: {team_name}, Betweenness Centrality: {centrality}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Grado medio ponderato\n",
+    "##### Il grado medio ponderato indica l'importanza media dei team in base al valore finanziario dei trasferimenti di giocatori associati a ciascun team. In altre parole, rappresenta l'importanza media di una squadra nel mercato dei trasferimenti dei giocatori. Quando calcoli il grado medio ponderato, stai considerando il valore totale dei trasferimenti in entrata e in uscita per ciascun team e lo dividi per il numero di tali trasferimenti. Questo valore rappresenta una stima dell'importanza finanziaria media di ciascun team nella rete di trasferimenti dei giocatori. Un grado medio ponderato più alto indica che un team è coinvolto in trasferimenti di giocatori di valore superiore, mentre un grado medio ponderato più basso indica trasferimenti di valore inferiore.\n",
+    "#### Si può usare questa metrica per identificare le squadre che sono economicamente più influenti nella rete dei trasferimenti dei giocatori. Le squadre con un grado medio ponderato più alto sono quelle che sono coinvolte in trasferimenti di giocatori con un valore finanziario complessivamente più alto rispetto alle altre squadre."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nodo: 985, Nome Team: Manchester United, Grado Medio Ponderato: 14410634.328358209\n",
+      "Nodo: 6692, Nome Team: Novara Calcio 1908, Grado Medio Ponderato: 14029729.72972973\n",
+      "Nodo: 131, Nome Team: FC Barcelona, Grado Medio Ponderato: 14005147.928994082\n",
+      "Nodo: 418, Nome Team: Real Madrid, Grado Medio Ponderato: 12934269.662921349\n",
+      "Nodo: 1148, Nome Team: Brentford FC, Grado Medio Ponderato: 11072272.727272727\n",
+      "Nodo: 31, Nome Team: Liverpool FC, Grado Medio Ponderato: 10939880.952380951\n",
+      "Nodo: 281, Nome Team: Manchester City, Grado Medio Ponderato: 10681606.33484163\n",
+      "Nodo: 1003, Nome Team: Leicester City, Grado Medio Ponderato: 10662500.0\n",
+      "Nodo: 16, Nome Team: Borussia Dortmund, Grado Medio Ponderato: 10608458.64661654\n",
+      "Nodo: 583, Nome Team: Paris Saint-Germain, Grado Medio Ponderato: 10442559.523809524\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Inizializza un dizionario per memorizzare il grado medio ponderato di ciascun nodo\n",
+    "weighted_degrees = {}\n",
+    "\n",
+    "# Calcola il grado medio ponderato per ciascun nodo\n",
+    "for node in net.nodes():\n",
+    "    if net.nodes[node]['label'] == 'team':\n",
+    "        total_in_weight_sum = 0\n",
+    "        total_out_weight_sum = 0\n",
+    "        in_node_count = 0\n",
+    "        out_node_count = 0\n",
+    "        \n",
+    "        for _, _, data in net.in_edges(node, data=True):\n",
+    "            total_in_weight_sum += data['transfer_fee_amnt']\n",
+    "            in_node_count += 1\n",
+    "        \n",
+    "        for _, _, data in net.out_edges(node, data=True):\n",
+    "            total_out_weight_sum += data['transfer_fee_amnt']\n",
+    "            out_node_count += 1\n",
+    "\n",
+    "        if in_node_count > 0 and out_node_count > 0:\n",
+    "            average_weighted_degree = (total_in_weight_sum + total_out_weight_sum) / (in_node_count + out_node_count)\n",
+    "            weighted_degrees[node] = average_weighted_degree\n",
+    "\n",
+    "# Ordina i nodi in base al grado medio ponderato in ordine decrescente\n",
+    "sorted_weighted_degrees = sorted(weighted_degrees.items(), key=lambda x: x[1], reverse=True)\n",
+    "\n",
+    "# Stampa i primi 10 nodi con il grado medio ponderato più alto, includendo il nome del team\n",
+    "for i, (node, weighted_degree) in enumerate(sorted_weighted_degrees[:10]):\n",
+    "    team_name = net.nodes[node]['name']\n",
+    "    print(f\"Nodo: {node}, Nome Team: {team_name}, Grado Medio Ponderato: {weighted_degree}\")"
    ]
   },
   {
